fix: Breadcrumbs: wrong size on HiDPI displays
(integrated from master branch change cffdb89 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -286,6 +286,7 @@ wizard#accountSetup
         &.folder .breadcrumb-arrow
         {
             background-image: @icon-breadcrumb-arrow;
+            background-size: 16px;
             margin-right: -16px;
             width: 16px;
             max-width: 16px;
